[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/ESCQuit.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/Level1.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 8 )

[node name="Level1" type="Node2D"]
script = ExtResource( 3 )

[node name="ESCQuit" parent="." instance=ExtResource( 1 )]

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 200, 40 )
collision_layer = 1025
collision_mask = 1025

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2( 128, 128 )
scale = Vector2( 19.9805, 1.49103 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2( 8, -8 )
shape = SubResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="Floor"]
polygon = PoolVector2Array( 0, 0, 0, -16, 16, -16, 16, 0 )

[node name="Laval" type="Area2D" parent="."]
position = Vector2( 0, 176 )
scale = Vector2( 48.04, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Laval"]
position = Vector2( 8, -8 )
shape = SubResource( 2 )

[node name="Polygon2D" type="Polygon2D" parent="Laval"]
color = Color( 0.952941, 0.0784314, 0.0784314, 1 )
polygon = PoolVector2Array( 0, 0, 0, -16, 16, -16, 16, 0 )

[node name="Victory" type="Area2D" parent="."]
position = Vector2( 416, 104.143 )
collision_layer = 1024
collision_mask = 1024
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Victory"]
position = Vector2( 8, -8 )
shape = SubResource( 3 )

[node name="Polygon2D" type="Polygon2D" parent="Victory"]
color = Color( 0.164706, 0.329412, 0.827451, 1 )
polygon = PoolVector2Array( 0, 0, 0, -16, 16, -16, 16, 0 )

[node name="UI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="UI"]

[node name="WinScreen" type="ColorRect" parent="UI/CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0901961, 0.184314, 0.956863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="UI/CanvasLayer/WinScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.0
margin_right = 44.0
margin_bottom = 7.0
text = "YOU WIN!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoseScreen" type="ColorRect" parent="UI/CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.960784, 0.0235294, 0.0235294, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/CanvasLayer/LoseScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 7.0
text = "YOU LOSE"
align = 1
valign = 1
[connection signal="body_entered" from="Laval" to="." method="_on_Laval_body_entered"]
[connection signal="body_entered" from="Victory" to="." method="_on_Victory_body_entered"]
